# SMRITI-Smart-Maintenance-Retrieval-Intelligence-

./: .gitattributes  .gitignore  README.md  implementation_plan.md
docs/: 01_PRD.md  (+7 more)
smriti-backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt
smriti-backend/app/: __init__.py  config.py  main.py
smriti-backend/app/api/: alerts.py  analytics.py  assets.py  auth.py  export.py  graph.py  guru.py  ingest.py  query.py  ws.py
smriti-backend/app/db/: analytics_store.py  chroma.py  graph.py  session_store.py
smriti-backend/app/models/: asset.py  guru.py  ingest.py  query.py
smriti-backend/app/prompts/: __init__.py  guru_followup.py  guru_opening.py  query_synthesis.py  tag_extraction.py
smriti-backend/app/services/alerts/: monitor.py
smriti-backend/app/services/analytics/: flight_risk.py  trend_engine.py
smriti-backend/app/services/debt/: scorer.py
smriti-backend/app/services/export/: pdf_excel_generator.py
smriti-backend/app/services/guru/: interviewer.py  session.py
smriti-backend/app/services/ingestion/: deduplicator.py  extractor.py  pipeline.py  tag_extractor.py
smriti-backend/app/services/llm/: client.py
smriti-backend/app/services/rag/: engine.py  retriever.py
smriti-backend/app/utils/: hash.py  tag_normalizer.py
smriti-backend/scripts/: seed_demo_data.py  verify_demo_ready.py  warm_demo_cache.py
smriti-backend/tests/: conftest.py  test_debt_scorer.py  test_utils.py
smriti-backend/tests/integration/: test_assets.py  test_guru.py  test_ingest_and_graph.py  test_query.py
smriti-backend/tests/unit/: test_utils_and_debt.py
(+98 files in other folders)
